# gram-hs

./: DESIGN.md  README.md  TODO-later.md  TODO.md  cabal.project  pattern.cabal
.cursor/rules/: specify-rules.mdc
.github/: copilot-instructions.md
.github/workflows/: haddock.yml  haskell.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
apps/gram-hs-cli/: Setup.hs  gram-hs-cli.cabal
apps/gramref-cli/: CHANGELOG.md  README.md  Setup.hs  gramref-cli.cabal
apps/gramref-cli/app/: Main.hs
apps/gramref-cli/man/: gramref.1
apps/gramref-cli/src/Gramref/: CLI.hs
apps/gramref-cli/src/Gramref/CLI/: JSON.hs  Output.hs  Types.hs
apps/gramref-cli/src/Gramref/CLI/Commands/: Convert.hs  Generate.hs  Match.hs  Parse.hs  Schema.hs  Transform.hs  Validate.hs
apps/gramref-cli/tests/: Test.hs
apps/gramref-cli/tests/Spec/CLI/: ConvertSpec.hs  GenerateSuiteSpec.hs  JSONSpec.hs  OutputSpec.hs
apps/gramref-cli/tests/Spec/Properties/: DeterministicSpec.hs
design/: gram-hs-cli-improvements.md  gram-hs-cli-plan.md  graph-lens.md  pattern-category.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: README.md
docs/design/: README.md
docs/guide/: 06-advanced-morphisms.md
docs/reference/: ARCHITECTURE.md  IMPLEMENTATION.md  PORTING-GUIDE.md  README.md  SPECIFICATION.md
docs/users/: README.md
examples/: examples.md
libs/gram/: CHANGELOG.md  SYNTAX_NOTES.md  TODO.md  gram.cabal
libs/pattern/: CHANGELOG.md  pattern.cabal
libs/subject/: subject.cabal
proposals/: pattern-reconciliation.md
public/: index.html
scripts/: README.md  ci-check.sh  init-submodules.sh
specs/: README.md
specs/001-pattern-data-structure/: data-model.md  quickstart.md
specs/002-basic-pattern-type/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-pattern-structure-review/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-construction-functions/: data-model.md  quickstart.md  tasks.md
specs/006-foldable-instance/: plan.md  spec.md  tasks.md
specs/007-traversable-instance/: tasks.md
specs/009-ord-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-predicate-matching/: tasks.md
specs/013-applicative-instance/: quickstart.md  tasks.md
specs/014-comonad-instance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-gram-serialization/: tasks.md
specs/016-gram-parsing-conformance/: tasks.md
specs/017-gram-serializer-updates/: plan.md  spec.md  tasks.md
specs/019-integration-polish/: data-model.md  plan.md  quickstart.md  (+3 more)
(+112 files in other folders)
